# fastapi-rag-template

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  README_.md  README_2.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.dev.conf  pyproject.toml
app/: main.py
app/ai/adapters/chunking/: __init__.py  base_chunking_adapter.py  (+1 more)
app/ai/enums/: __init__.py  chunking_enum.py  emebddings_enum.py  file_extension_enum.py  llm_enum.py  page_mode_enum.py
app/ai/factories/: __init__.py  loader_factory.py
app/ai/pipelines/: __init__.py  indexing_pipeline.py  retrieval_pipeline.py
app/application/services/: auth_service.py  hasher_service.py  jwt_service.py  user_service.py
app/bootstrap/: container.py
app/config/: logger_config.py  settings.py
app/domain/entities/: auth_entity.py  user_entity.py
app/domain/respositories/: refresh_token_repository.py  token_repository.py  user_repository.py
app/infrastructure/: database.py
app/infrastructure/messaging/: __init__.py  base_messaging_client.py  rabbitmq_client.py  worker_indexing.py
app/infrastructure/models/: __init__.py  auth_model.py  base.py  chat.py  knowledge.py  user_model.py
app/infrastructure/repository_impl/: refresh_token_impl.py  token_impl.py  user_repository_impl.py
app/presentation/api/: dependencies.py
app/presentation/schemas/: auth_schemas.py  user_schemas.py
migration/: env.py
migration/versions/: 0806db9d8adc_create_refresh_tokens_table.py  0abc0aec854e__init_table.py  2fd82f7411e5_init__table.py  db0b5d6eb497__init_table.py
(+21 files in other folders)
